// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip rtl render component should be rendered correctly in RTL direction 1`] = `<span />`;

exports[`Tooltip should hide when mouse leave ezd disabled component Button 1`] = `
<span
  class="ezd-tooltip-disabled-compatible-wrapper"
  style="display: inline-block; cursor: not-allowed;"
>
  <button
    class="ezd-btn"
    disabled=""
    style="pointer-events: none;"
    type="button"
  />
</span>
`;

exports[`Tooltip should hide when mouse leave ezd disabled component Checkbox 1`] = `
<span
  class="ezd-tooltip-disabled-compatible-wrapper"
  style="display: inline-block; cursor: not-allowed;"
>
  <label
    class="ezd-checkbox-wrapper ezd-checkbox-wrapper-disabled"
    style="pointer-events: none;"
  >
    <span
      class="ezd-checkbox ezd-checkbox-disabled"
    >
      <input
        class="ezd-checkbox-input"
        disabled=""
        type="checkbox"
        value=""
      />
      <span
        class="ezd-checkbox-inner"
      />
    </span>
  </label>
</span>
`;

exports[`Tooltip should hide when mouse leave ezd disabled component Switch 1`] = `
<span
  class="ezd-tooltip-disabled-compatible-wrapper"
  style="display: inline-block; cursor: not-allowed;"
>
  <button
    aria-checked="false"
    class="ezd-switch ezd-switch-disabled"
    disabled=""
    role="switch"
    style="pointer-events: none;"
    type="button"
  >
    <div
      class="ezd-switch-handle"
    />
    <span
      class="ezd-switch-inner"
    />
  </button>
</span>
`;
